# file-compre

./: Dockerfile  Makefile  README.md  dockerignore
docs/: ALGO_MAPPING_AND_WORKFLOWS_2025-10-29T00-06-03.txt  COMPRESSION_ALGORITHMS_HINGLISH.md  HOSTING_GUIDE.txt  IMAGE_COMPRESSION_OPTIMIZATION.md  PROJECT_FULL_REFERENCE.txt  RENDER_DEPLOY_GUIDE.txt  render.env
include/: comp_container.h  comp_result.h  compressor.h  decompressor.h  img_preconditioner.h  zlib_adapter.h
scripts/: img_torture.c
src/: audio_compressor.c  audio_doc_codec.h  batch_analyzer.c  batch_decompressor.c  bitio.c  bwt.c  bwt_mtf_huffman.c  byte_order.c  comp_container.c  comprehensive_tester.c  compressor.c  compressor_core.c  crc32.c  decompress_one.c  decompressor_main.c  decompressor_main_fixed.c  deflate_wrapper.c  delta_rle.c  endian_shim.c  fallback_decompressor.c  file_analyzer.c  file_io.c  file_io_fixed.c  file_repair_tool.c  gui.c  gui_stub.c  hardcore_compression.c  header_codec_cli.c  huffman.c  image_compressor_stub.c  img_lossless.h  img_preconditioner.c  logger.c  logger_fixed.c  logger_shim.c  lz77.c  lzma_stub.c  lzma_wrapper.c  lzw_compress_stub.c  main.c  (+15 more)
src/gui/: CMakeLists.txt  Info.plist.in  drop_area.c  drop_area.h  job_thread.c  job_thread.h  main.c  main_window.c  main_window.h
web/: index.html  server.py  style.css
web/output/: complex-nested.xml.comp
web/uploads/: C++_Questions_and_Solutions.pdf.comp
